--- a/Properties/AndroidManifest.xml
+++ b/Properties/AndroidManifest.xml
@@ -9,4 +9,5 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.hardware.camera" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <activity android:name="TreeMain"></activity>
 </manifest>
